# phud_project

./: .gitignore  CMakeLists.txt  Doxyfile  asciiart.txt   doxyfile  phud_project_update.patch  sharedmemorydoced.h  sharedmemorydoced.hpp
cli/: CMakeLists.txt  cli.cpp
command_lib/: CMakeLists.txt  README.md
comms/: CMakeLists.txt  MPPComms.hpp  UnixSocketComms.cpp  UnixSocketComms.hpp
docs/: apidoc.md  ipc_command_api.md
docs/api_spec/: README.md  apispec.md  dd.md
docs/uml/: class.puml  sequence.puml
hud/: CMakeLists.txt  hud  hud.cpp  hudnew  hudnew.cpp
include/: IPCInterface.hpp  IPCManager.h  IPCManager.hpp  IPCType.h  IPCType.hpp  PacketInfo.hpp  SharedMemoryIPC.h  SharedMemoryIPC.hpp  UnixSocketComms.hpp  UnixSocketIPC.h  UnixSocketIPC.hpp  cli.hpp  hud.hpp  net.hpp
ipc/: CMakeLists.txt  IPCManager.cpp  SharedMemoryIPC.cpp  UnixSocketIPC.cpp
ipc_lib/: CMakeLists.txt  README.md
ipc_lib/include/: IPCInterface.h
ipc_lib/src/: UnixSocketIPC.cpp
libs/command_lib/: CMakeLists.txt
libs/command_lib/include/: CommandManager.h
libs/command_lib/tests/: CMakeLists.txt
libs/ipc_lib/: CMakeLists.txt
libs/ipc_lib/include/: IPCManager.h
libs/ipc_lib/src/: SharedMemoryIPC.cpp
libs/ipc_lib/tests/: CMakeLists.txt
ncurses_experiment/src/: tx_channel  tx_channel.cpp
net/: CMakeLists.txt  net  net.cpp
src/: CommandManager.cpp  IPCManager.cpp  SharedMemoryIPC.cpp
tests/: CMakeLists.txt  README.md  ipc_reader.cpp  ipc_writer.cpp  test.cpp  test_SharedMemoryIPC.cpp  test_cli.cpp  test_cli_hud_integration.cpp  test_command.cpp  test_comms.cpp  test_hud.cpp  test_integration.cpp  test_ipc.cpp  test_net.cpp  test_shared_memory_ipc.cpp
